Completely fixed the message alignment issue

--- a/styles.css
+++ b/styles.css
@@ -121,6 +121,7 @@ header img {
   border-radius:10px;
   color: #000;
   font-weight: 600;
+  clear: both;
 }
 .speech::before {
   content:"";
@@ -151,8 +152,9 @@ header img {
 }
 .speech.userown {
   margin-right: 10px;
-  right: 0;
+  float: right;
 }
 .speech.otherown {
   margin-left: 10px;
+  float: left;
 }
